# coding_challenge

./: README.md
1/: CWCC.py  cwcc  pyproject.toml  readme.md  tests.txt
2/: parser.py
